# AI-LearningBook

./: .gitignore  .gitignore.py  README.md  example_run.sh
CV/3D_Scanning_and_Motion_Capture/3D_reconstruction/: README.md
CV/3D_Scanning_and_Motion_Capture/3D_reconstruction/src/: CMakeLists.txt
LLM/HowTo_LangChain/: 0_basics.ipynb  1_memory.ipynb  3_Chains.ipynb  3_QuestionAnswer.ipynb  4_Evaluation.ipynb  5_Agents.ipynb  OutdoorClothingCatalog_1000.csv
computer_vision/3D_Scanning_and_Motion_Capture/3D_reconstruction/: README.md
computer_vision/3D_Scanning_and_Motion_Capture/3D_reconstruction/src/: README.md  main.cpp
computer_vision/3D_Scanning_and_Motion_Capture/lecture_notes/: Lecture1-basic_concepts_geometry.md  README.md
datasets/tao/: tao_val_subset.txt
docs/: README.md
eval/: eval_similarity.py  eval_utils.py  kf_tracker.py  similarity_funcs.py
speech_and_language_processing/: word_segmentation.py
test/: box_and_mask.py
tools/: common.py  image_utils.py  io.py  logging.py  video_utils.py  visualize.py
tracking/: prop_preprocess.py  vis_warped_masks.py  visualization.py
